// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup should render a pop with title,close button and content 1`] = `
<Popup
  boundingRef={null}
  classNameArrow={null}
  classNameContent={null}
  classNameOverlay={null}
  contentAttachment="middle center"
  contentHeight="240"
  contentWidth="320"
  isArrowDisplayed={false}
  isHeaderDisabled={true}
  isOpen={false}
  onRequestClose={[Function]}
  targetRef={[Function]}
>
  <div>
    <div
      className="popup-header"
    >
      <p
        className="popup-title"
      >
        Title
        <button
          className="close-button"
          onClick={[Function]}
        >
          <IconClose
            className="close-icon"
            data-name="Layer 1"
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </p>
    </div>
    <div>
       This is a test content
    </div>
  </div>
</Popup>
`;

exports[`Popup should render a popup without header(title & close button) 1`] = `
<Popup
  boundingRef={null}
  classNameArrow={null}
  classNameContent={null}
  classNameOverlay={null}
  contentAttachment="middle center"
  contentHeight="240"
  contentWidth="320"
  isArrowDisplayed={false}
  isHeaderDisabled={true}
  isOpen={false}
  onRequestClose={[Function]}
  targetRef={[Function]}
>
  <div>
    <div>
       This is a test content
    </div>
  </div>
</Popup>
`;
